[tool.poetry]
name = "movie-art"
version = "0.1.0"
description = ""
authors = ["Ramon Meza <ramon_meza@live.com>"]
readme = "README.md"
packages = [{include = "movie_art"}]

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.8.1.78"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.7"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
